--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,6 @@ header h1 {
     display: inline-block;
     font-size: 48px;
     color: #ffffff;
-    /* text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; */
 }
 
 header div {
@@ -30,8 +29,9 @@ header div ul li {
     margin-left: 25px;
 }
 
-a {
+header a {
     color: #ffffff;
+    text-align: end;
 }
 
 header ul li a::after {
@@ -42,20 +42,27 @@ header ul li a::after {
 
 /* top image */
 #photo {
-    height: 200px;
+    height: 300px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url (".assets/images/updated-photo.png");
+    background-image: url("../images/updated-photo.png");
     background-size: cover;
     background-position: center;
 }
+
+#photo h2 {
+    padding-top: 200px;
+    text-align: right;
+}
+
 /* body */
 h2 {
     display: inline-block;
     font-size: 30px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #FF69B4;
     margin-left: 75%;
-    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+    text-shadow: -2px 0 white, 0 2px white, 2px 0 white, 0 -2px white;
 }
 
 /* code for footer */
@@ -66,3 +73,19 @@ footer {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
 }
+
+/* screen size adjustment */ 
+@media screen and (max-width: 992px) {
+    header {
+      display: flex;
+      flex-wrap: wrap;
+    }
+  }
+  
+  @media screen and (max-width: 768px) {
+    header, h2 {
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+    }
+  }
