--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,12 @@ header ul li a::after {
 #photo h2 {
     padding-top: 200px;
     text-align: right;
+    display: inline-block;
+    font-size: 30px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #FF69B4;
+    margin-left: 75%;
+    text-shadow: -2px 0 white, 0 2px white, 2px 0 white, 0 -2px white;
 }
 
 /* body */
@@ -61,9 +67,50 @@ h2 {
     font-size: 30px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #FF69B4;
-    margin-left: 75%;
-    text-shadow: -2px 0 white, 0 2px white, 2px 0 white, 0 -2px white;
 }
+
+.container {
+    display: flex;
+    flex-direction: row;
+}
+
+.label {
+    display: flex;
+    padding-left: 20px;
+    /* padding-right: 5%;
+    border-right: solid #FF69B4 2px; */
+}
+
+    /* about me info */
+.am-info {
+    display: block;
+}
+
+    /* Horiseon project section */
+#img1 {
+    height: 200px;
+}
+
+    /* placeholder project section */
+h3 {
+    display: inline-block;
+    font-size: 15px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #FF69B4;
+}
+
+.placeholder-images {
+    height: 100px;
+}
+
+    /* email */
+/* .email p li {
+    display: none;
+}
+.email p li:hover {
+    display: block;
+    list-style-type: none;
+} */
 
 /* code for footer */
 footer {
