--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,7 +108,6 @@ h2 {
 .am-info {
     display: inline-block;
     font-size: 20px;
-
 }
 
     /* project/work section */
@@ -175,13 +174,19 @@ h2 {
 
 #contact {
     display: inline-block;
-    font-size: 50 px;
-    color: #FF69B4;
+    /* color: #FF69B4; */
+}
+
+#contact > p {
+    font-size: 20px;
+    padding-bottom: 5px;
 }
 
 #contact > a {
     text-decoration: none;
+    font-size: 20px;
     color: #FF69B4;
+    padding-right: 5px;
 }
 
 #email::before {
