updated app to include project 1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,8 +117,8 @@ h2 {
     justify-content: center;
 }
 
-.horiseon {
-    background-image: url("../images/horiseon-crop.png");
+.arewethereyet {
+    background-image: url("../images/portfolio-project1.png");
     background-size: cover;
 }
 
